Changes for 1.1beta7:

 - added column actions.status (Alexei)
 - added Hostname for graphs displaying (Eugene)
 - added hosekeeper support for frontend (Eugene)
 - added table housekeeper (Alexei)
 - added value mapping for e-mail content (Eugene)
 - support of max(#N) for sum,min,max,delta and avg (Alexei)
 - developed value mapping (Eugene)
 - added column items.valuemapid (Alexei)
 - added tables valuemaps and mappings (Alexei)
 - fix for initial update of host statuses (Alexei)
 - improved templates logic for graphs (Eugene)
 - improved templates logic for triggers (Eugene)
 - added graphs.templateid (Alexei)
 - added triggers.templateid (Alexei)
 - fixed navigation bar for Sreens (Eugene)
 - fixed incorrect groupid error for actions (Eugene)
 - developed new templates logic for items (Eugene)
 - speed improvement for proc.num of Tru64 (Eugene)
 - fixed evaluation of {IPADDRESS} (Alexei)
 - added hosts.templateid and items.templateid (Alexei)

Changes for 1.1beta6:

 - fixed synchronisation of template graphs when using a template (Alexei)
 - added new server parameter UnavailablePeriod (Alexei)
 - dropped column hosts.network_errors (Alexei)
 - added column hosts.errors_from (Alexei)
 - GUI made immune to SQL injection attacks (Alexei)
 - added Check All functionality (Eugene)
 - added support of icon label locations (Alexei)
 - added new column sysmaps.label_location (Alexei)
 - better processing of server startup/shutdown (Alexei)
 - improved proc.num for Linux, added parameter 'comm' (Eugene)
 - fixed two different units in two graph axes (Alexei)
 - renamed latestalarms.php and alerts.php (Alexei)
 - fix crash in processing of autoregistration (Alexei)
 - added validate.inc.php (Alexei)
 - minor fix for schema of table 'rights' (Alexei)
 - fixed trigger linkage form (Alexei)
 - possibly fixed processing of SNMP Counter32 metrics (Alexei)
 - added HTML classes into PHP framework (Eugene)
 - new trigger functions: logseverity and logsource (Alexei)